<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    tools:context=".ui.auth.ProfileSetupFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image_entry"
        android:layout_width="150dp"
        android:layout_marginTop="28dp"
        android:layout_height="150dp"
        android:src="@drawable/dummy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:textSize="24sp"
        android:textStyle="bold|normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_details"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:textSize="16sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="14dp">

            <EditText
                android:id="@+id/username_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:ems="1"
                android:hint="@string/enter_your_username"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/update_btn"
                style="@style/Theme.MessagingApp.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/update" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>